Update 'npvwnfrm5-go' component image to: quay.io/jsmid/rhtap-qe-go:63607bb271a3b26eec6608fae4a2ef5a6a086ab9@sha256:754b1ae310e52b0e73a0e89f2600330617e06f6a3e61ee27d591fd14c716f270

--- a/components/npvwnfrm5-go/overlays/development/deployment-patch.yaml
+++ b/components/npvwnfrm5-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: npvwnfrm5-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/rhtap-qe-go:63607bb271a3b26eec6608fae4a2ef5a6a086ab9@sha256:754b1ae310e52b0e73a0e89f2600330617e06f6a3e61ee27d591fd14c716f270
+          name: container-image
